--- a/bin/DeptEmpMgmt.dll.config
+++ b/bin/DeptEmpMgmt.dll.config
@@ -10,9 +10,10 @@
   </configSections>
   <connectionStrings>
     <!-- <add name="DefaultConnection" connectionString="Data Source=SERVER08\MSSQL2012;Initial Catalog=aspnet-DeptEmpMgmt-20150613024804;Integrated Security=True;User Instance=True"/>-->
-    <add name="DefaultConnection" connectionString="Data Source=SERVER08\MSSQL2012;Initial Catalog=UserManagement;User Id=anitha;Password=Promact2015;integrated security=false;Timeout=150;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=SERVER08\MSSQL2012;Initial Catalog=UserManagement;User Id=anitha;Password=Promact2015;integrated security=false;timeout=150" providerName="System.Data.SqlClient" />
   </connectionStrings>
-   <appSettings>
+  <appSettings>
+    <add key ="SendEmail" value="true"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -25,6 +26,14 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+  <system.net>
+    <mailSettings>
+      <smtp from="anitha@promactinfo.com">
+        <network host="mail.promactinfo.com" port="587" userName="anitha@promactinfo.com" password="Promact2015" />
+      </smtp>
+    </mailSettings>
+  </system.net>
+
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
