--- a/DeptEmpMgmt.csproj
+++ b/DeptEmpMgmt.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Controllers\DepartmentsController.cs" />
     <Compile Include="Controllers\EmployeesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="CustomFilters\AuthLogAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -180,6 +181,22 @@
     <Compile Include="Migrations\201506300726225_Admin.cs" />
     <Compile Include="Migrations\201506300726225_Admin.Designer.cs">
       <DependentUpon>201506300726225_Admin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201507010837463_password.cs" />
+    <Compile Include="Migrations\201507010837463_password.Designer.cs">
+      <DependentUpon>201507010837463_password.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201507010920322_AspnetUsers.cs" />
+    <Compile Include="Migrations\201507010920322_AspnetUsers.Designer.cs">
+      <DependentUpon>201507010920322_AspnetUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201507020449228_LoginCount.cs" />
+    <Compile Include="Migrations\201507020449228_LoginCount.Designer.cs">
+      <DependentUpon>201507020449228_LoginCount.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201507031236480_Department.cs" />
+    <Compile Include="Migrations\201507031236480_Department.Designer.cs">
+      <DependentUpon>201507031236480_Department.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -247,11 +264,14 @@
     <Content Include="Views\Role\Edit.cshtml" />
     <Content Include="Views\Role\ManageUserRoles.cshtml" />
     <Content Include="Views\Role\RoleAddToUser.cshtml" />
+    <Content Include="Views\Account\ConfirmEmail.cshtml" />
+    <Content Include="Views\Manage\ChangePassword.cshtml" />
+    <Content Include="Views\Account\ChangePassword.cshtml" />
+    <Content Include="Views\Employees\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\BaseApi\" />
-    <Folder Include="Views\Manage\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -269,6 +289,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201506300726225_Admin.resx">
       <DependentUpon>201506300726225_Admin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507010837463_password.resx">
+      <DependentUpon>201507010837463_password.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507010920322_AspnetUsers.resx">
+      <DependentUpon>201507010920322_AspnetUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507020449228_LoginCount.resx">
+      <DependentUpon>201507020449228_LoginCount.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507031236480_Department.resx">
+      <DependentUpon>201507031236480_Department.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
