Some discrepancies in DepartmentId, Name

--- a/DeptEmpMgmt.csproj
+++ b/DeptEmpMgmt.csproj
@@ -268,6 +268,7 @@
     <Content Include="Views\Manage\ChangePassword.cshtml" />
     <Content Include="Views\Account\ChangePassword.cshtml" />
     <Content Include="Views\Employees\Details.cshtml" />
+    <Content Include="Views\Account\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
